# mono

./: CHANGELOG.md  README.md  cabal.project  mono.cabal
src/Data/: MonoFoldable.hs  MonoFunctor.hs  MonoTraversable.hs
src/Data/MonoFunctor/: IntegralBits.hs  IntegralBytes.hs  MonoCompose.hs
src/Data/Types/: Bits.hs  IntegralBits.hs  IntegralBytes.hs  MonoCompose.hs
src/Mono/Lib/: Utils.hs
src/Mono/Typeclasses/: MonoFoldable.hs  MonoFunctor.hs  MonoPointed.hs  MonoTraversable.hs
src/Mono/Types/: BitArray.hs  ByteArray.hs  IntegralBits.hs  IntegralBytes.hs  MonoCompose.hs
tests/Tests/Types/: BitArraySpec.hs  ByteArraySpec.hs  IntegralBitsSpec.hs  IntegralBytesSpec.hs
