cabal-version:      3.0
name:               mono
version:            0.1.0.0
synopsis:           Monomorphic versions of typeclasses Functor, Foldable and Traversable.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/mono#readme>
category:           Data
homepage:           https://github.com/lambda-dom/mono#readme
author:             lambda-dom
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
extra-source-files:
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/mono

common common-fields
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        TypeFamilies
    build-depends:
        -- GHC 9.6
        base >=4.18 && <4.19,
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages

library
    import: common-fields
    hs-source-dirs:
        src
    build-depends:
        bytestring >=0.11 && <0.13,
        text >=2.0 && <2.2,
        containers >=0.6 && <0.8,
        vector >=0.13 && <0.14,
        array >=0.5 && <0.6,
    other-modules:
    exposed-modules:
        Mono.Typeclasses.MonoFunctor
        Mono.Typeclasses.MonoPointed
        Mono.Typeclasses.MonoFoldable
        Mono.Typeclasses.MonoTraversable
        Mono.Types.MonoCompose
        Mono.Types.BitArray
        Mono.Types.ByteArray

test-suite trisagion-tests
    import: common-fields
    type: exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is: Spec.hs
    build-depends:
        hspec ^>=2.11 && <2.12,
        mono,
    build-tool-depends:
        hspec-discover:hspec-discover
    other-modules:
        Tests.Types.BitArraySpec
        Tests.Types.ByteArraySpec
