cabal-version:      3.0
name:               mono
version:            0.1.0.0
synopsis:           Monomorphic versions of typeclasses Functor, Foldable and Traversable.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/mono#readme>
category:           Data
homepage:           https://github.com/lambda-dom/mono#readme
author:             G. Rodrigues
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
tested-with:
    GHC == {9.6.7, 9.8.4}
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/mono

library
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        TypeFamilies
        FunctionalDependencies
    build-depends:
        -- GHC 9.10
        base >=4.20,
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages
    hs-source-dirs:
        src
    other-modules:
    exposed-modules:
        Mono.Typeclasses.MonoFunctor
        Mono.Typeclasses.MonoFoldable
