cabal-version:      3.0
name:               mono
version:            0.3.1.0
synopsis:           Monomorphic versions of typeclasses Functor, Foldable and Traversable.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/mono#readme>
category:           Data
homepage:           https://github.com/lambda-dom/mono#readme
author:             G. Rodrigues
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
tested-with:
    GHC == {9.10.3}
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/mono

library
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        TypeFamilies
        FunctionalDependencies
    build-depends:
        -- GHC >= 9.10
        base >=4.20 && <4.21,
        bytestring >=0.12 && <0.13,
        containers >=0.7 && <0.8,
        text >=2.1 && <2.2,
        vector >=0.13 && <0.14,
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages
    hs-source-dirs:
        src
    other-modules:
    exposed-modules:
        Mono.Typeclasses.MonoFunctor
        Mono.Typeclasses.MonoPointed
        Mono.Typeclasses.MonoFoldable
